# ConcurrencyMQ

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
app/: client.py  server.py
fastapi_app/: client.py  client_encrypt.py  server.py  server_encrypt.py
fastapi_app/schemas/: request_models.py
zmq_app/: client.py  server.py
